<resources>
    <string name="app_name">GrievanceApp</string>

    <string name="preference_file_name" translatable="false">com.example.shubham.sharedpref_file</string>
    <string name="username" translatable="false">prefs_username</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="auth_failed">Invalid Username or Password</string>
    <string name="action_register">Sign Up</string>
    <string name="prompt_username">Username</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="action_submit">Submit</string>
    <string name="incomplete_form">Please fill all the details</string>
    <string name="add_image">Add Image</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="login">Login</string>
    <string name="nametv">Name</string>
    <string name="ageTv">Age</string>
    <string name="sexTv">Sex</string>
    <string name="managerTv">Manager</string>
    <string name="no_urls">No Images Present. Please add an Image to register your Grievance.</string>
    <string name="upload_failed">Upload failed, Please try again.</string>
    <string name="activity_list_title">Grievances</string>
    <string name="no_grievances">No Grievance Present</string>
    <string name="activity_new_title">New Grievance</string>
    <string name="activity_images_title">Add Images</string>

    <!--formats-->
    <string name="manager_format">Manager: %1s</string>
    <string name="age_format">, %1s</string>
    <string name="choose_pic_method">Choose From</string>


    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
